Add tests for some KaitaiStream methods
Failures (6):
  KaitaiStream
    × readS8be (3 ms)
    × readS8le (1 ms)
    readBytesTerm
      when terminator is present in an input
        × include =  true, consume = false, eosError = false (1 ms)
        × include =  true, consume = false, eosError =  true
        × include =  true, consume =  true, eosError = false (1 ms)
        × include =  true, consume =  true, eosError =  true (1 ms)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "files": [
     "KaitaiStream.js"
   ],
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
   "keywords": [
     "binary",
     "file",
