package.json: list "files" to publish; remove .npmignore
Inspired by https://medium.com/@jdxcode/for-the-love-of-god-dont-use-npmignore-f93c08909d8d

Note that it's currently enough to list only `KaitaiStream.js` in
"files" - other essential files are published by default (see
https://docs.npmjs.com/cli/v6/configuring-npm/package-json#files).

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "url": "https://github.com/kaitai-io/kaitai_struct_javascript_runtime/issues"
   },
   "main": "index.js",
+  "files": [
+    "KaitaiStream.js"
+  ],
   "keywords": [
     "binary",
     "file",
