--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,8 @@ name: npm build
 
 on:
   push:
-    branches:
-      - master
-  pull_request: {}
+    tags:
+      - '0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
 
 jobs:
   publish-npm:
