--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "Apache-2.0",
   "author": "Kaitai team (https://github.com/orgs/kaitai-io/people) and Ilmari Heikkinen",
   "homepage": "https://github.com/kaitai-io/kaitai_struct_javascript_runtime#readme",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/kaitai-io/kaitai_struct_javascript_runtime.git"
@@ -12,10 +13,36 @@
   "bugs": {
     "url": "https://github.com/kaitai-io/kaitai_struct_javascript_runtime/issues"
   },
-  "main": "index.js",
-  "files": [
-    "KaitaiStream.js"
-  ],
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
+    }
+  },
+  "scripts": {
+    "build": "rimraf dist && rollup -c"
+  },
+  "dependencies": {
+    "pako": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/pako": "^2.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "ts-loader": "^9.4.2",
+    "tslib": "^2.5.0",
+    "rimraf": "^4.1.2",
+    "rollup": "^3.15.0"
+  },
   "keywords": [
     "binary",
     "file",
