--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "allowJs": true,
     "stripInternal": true,
     "isolatedModules": true,
     "importsNotUsedAsValues": "error",
