--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaitai-struct",
-  "version": "0.10.0",
+  "version": "0.11.0-SNAPSHOT.1",
   "description": "Kaitai Struct: runtime library for JavaScript",
   "license": "Apache-2.0",
   "author": "Kaitai team (https://github.com/orgs/kaitai-io/people) and Ilmari Heikkinen",
