--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: npm build
+name: npm publish
 
 on:
   push:
     tags:
-      - '0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
+      - 'v0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
 
 jobs:
   publish-npm:
