GH Actions: run `npm run build` before publishing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ jobs:
           node-version: '20'
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm run build
+      - name: Check that KaitaiStream.js will be included
+        run: |
+          npm publish --tag next --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
       - name: Publish to npm
         run: npm publish --tag next
         env:
