--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kaitai-io/kaitai_struct_javascript_runtime.git"
+    "url": "git+https://github.com/kaitai-io/kaitai_struct_javascript_runtime.git"
   },
   "license": "Apache-2.0",
   "author": "Kaitai team (https://github.com/orgs/kaitai-io/people) and Ilmari Heikkinen",
