Update typescript and devDependencies
This creates a bit more concise js output from TypeScript.

My main intention was to remove rollup from this project as tsc supports
umd output too. But for some reason the umd output doesnt seem to work
with the tests as the import seems to be different with rollup.
Dropping support for old JS and using ES modules rather than umd would
simplify the toolchain here.
ES modules are supported from Node.js 12 which is also many years out of
support already. All browsers support ES modules for years now so
requiring ES modules shouldnt be a big problem. But for this PR I stayed
with bumping the dependencies.

--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
   },
   "license": "Apache-2.0",
   "author": "Kaitai team (https://github.com/orgs/kaitai-io/people) and Ilmari Heikkinen",
+  "type": "commonjs",
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
-    "KaitaiStream.js",
-    "KaitaiStream.d.ts",
-    "index.d.ts"
+    "*.js",
+    "*.d.ts"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prepack": "npm run build"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^16.11.11",
-    "rollup": "^2.60.2",
+    "rollup": "^4.35.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "typescript": "^5.8.2"
   }
 }
