--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: npm publish
 on:
   push:
     tags:
-      - 'v0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
+      - "v0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+"
 
 jobs:
   publish-npm:
@@ -12,13 +12,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "lts/*"
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm run build
       - name: Check that KaitaiStream.js will be included
-        run: |
-          npm publish --tag next --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
+        run: npm pack --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
       - name: Publish to npm
         run: npm publish --tag next
         env:
