GH Actions: revert `npm pack` back to `npm publish --dry-run`
See https://github.com/kaitai-io/kaitai_struct_javascript_runtime/pull/32#discussion_r2002175444

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - name: Check that KaitaiStream.js will be included
-        run: npm pack --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
+        run: |
+          npm publish --tag next --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
       - name: Publish to npm
         run: npm publish --tag next
         env:
