package.json: list `files` explicitly again
See https://github.com/kaitai-io/kaitai_struct_javascript_runtime/pull/32#discussion_r2014940893

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   "main": "index.js",
   "types": "index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts"
+    "KaitaiStream.js",
+    "KaitaiStream.d.ts",
+    "index.d.ts"
   ],
   "scripts": {
     "build": "rollup -c",
