--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,20 +5,27 @@ on:
     tags:
       - 'v0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
 
+permissions: {}
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # Required for OIDC (see https://docs.npmjs.com/trusted-publishers)
+      contents: read
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
           registry-url: https://registry.npmjs.org/
+      - name: Update npm
+        run: npm install -g npm@latest
       - run: npm ci
       - name: Check that KaitaiStream.js will be included
         run: |
           npm publish --tag next --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
       - name: Publish to npm
         run: npm publish --tag next
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
