--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v0.[0-9]+.[0-9]+-SNAPSHOT.[0-9]+'
+      - 'v0.[0-9]+.[0-9]+'
 
 permissions: {}
 
@@ -24,8 +25,20 @@ jobs:
       - name: Update npm
         run: npm install -g npm@latest
       - run: npm ci
+      - name: Select dist-tag
+        run: |
+          GIT_TAG=${GITHUB_REF#refs/tags/*}
+          if [[ "$GIT_TAG" == v0.+([0-9]).+([0-9])-SNAPSHOT.+([0-9]) ]]; then
+            DIST_TAG=next
+          elif [[ "$GIT_TAG" == v0.+([0-9]).+([0-9]) ]]; then
+            DIST_TAG=latest
+          else
+            echo "Error: the tag name '$GIT_TAG' does not match any of the patterns"
+            exit 1
+          fi
+          echo "DIST_TAG=$DIST_TAG" >> "$GITHUB_ENV"
       - name: Check that KaitaiStream.js will be included
         run: |
-          npm publish --tag next --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
+          npm publish --tag "$DIST_TAG" --dry-run --json | jq --exit-status '.files | map(.path) | any(. == "KaitaiStream.js")'
       - name: Publish to npm
-        run: npm publish --tag next
+        run: npm publish --tag "$DIST_TAG"
